<resources>
    <string name="app_name">枞阳多规</string>
    
    <string name="base_ip">112.27.91.2</string>
    
    <string name="base_port">9006</string>

    <!--netty推送端口-->
    <string name="netty_port">8686</string>

    <string name="default_base_url">112.27.91.2:9006</string>

    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="remember_psw">记住密码</string>
    <string name="login">登录</string>


    <!--ImageView内容描述-->
    <string name="app_logo">应用logo</string>
    <string name="icon_username">用户名图标</string>
    <string name="icon_psw">密码图标</string>


    <string name="login_status_logging_in">登录中,请稍后...</string>
    <string name="login_status_null_username_or_password">帐号和密码不能为空。</string>
    <string name="login_status_invalid_username_or_password">帐号，密码错误或无权限登录，请重新输入。</string>
    <string name="login_status_network_or_connection_error">网络错误，请稍后再试。</string>
    <string name="login_status_failure">登录失败，请检查网络或用户名密码是否正确。</string>
    <string name="login_status_ip_failure">请检查IP设置。</string>
    <string name="connection_timeout">连接超时</string>


    <string name="save">保存</string>
    <string name="exit_app">确定要退出系统吗？</string>
    <string name="exit_warn">“注销”后将无法收到新的待办事项通知！</string>
    <string name="submit">提交</string>

    <string name="lastUpdateTime">最近更新:</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>


    <string name="item_work">我的工作</string>
    <string name="item_not_to_do">待办事项</string>
    <string name="item_doing">在办事项</string>
    <string name="item_have_to_do">已办事项</string>
    <string name="item_supervision">效能督查</string>
    <string name="item_project_search">项目查询</string>

    <string name="not_to_do">待办</string>
    <string name="doing">在办</string>
    <string name="have_to_do">已办</string>

    <string name="register_phase">登记阶段</string>
    <string name="being_deal_with">正在办理</string>
    <string name="overdue">逾期</string>
    <string name="have_done">已办结</string>
    <string name="hang_up">挂起</string>
    <string name="about_to_expire">即将到期</string>
    <string name="overtime_not_todo">超时未办</string>
    <string name="overtime_have_todo">超时已办</string>
    <string name="shceme_joint_trial">方案会审</string>

    <!--项目基本信息-->
    <string name="basis_info">基本信息</string>
    <string name="item_no">项目编号:</string>
    <string name="project_name">项目名称:</string>
    <string name="project_category">项目类别:</string>
    <string name="project_class_small">项目小类:</string>
    <string name="construction_content">建设内容:</string>
    <string name="legal_representative">法人代表:</string>
    <string name="construction_unit">建设单位:</string>
    <string name="unit_address">单位地址:</string>
    <string name="competent_department">主管部门:</string>
    <string name="land_nature">用地性质:</string>
    <string name="construction_land_area">建设用地面积(㎡):</string>
    <string name="construction_area">建筑面积(㎡):</string>
    <string name="investment_total">总投资(万元):</string>
    <string name="funding_source">资金来源:</string>
    <string name="area">所属区域:</string>
    <string name="choose_location">拟选位置:</string>
    <string name="limit_age_begin_construction">建设开始年限:</string>
    <string name="limit_age_complete_construction">建设完成年限:</string>
    <string name="land_ownership">土地权属:</string>
    <string name="project_summary">工程概况:</string>
    <string name="contact">联系人:</string>
    <string name="contact_phone">联系电话:</string>

    <string name="title_activity_my_work">MyWorkActivity</string>
    <string name="title_activity_my_work_tab">MyWorkTabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
